// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSVisualPicker Coverable 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "background": "rgb(244, 246, 249)",
        "padding": "4rem 1rem 0px",
      }
    }
  >
    <h1>
      Radio
    </h1>
    <fieldset
      className="slds-form-element"
      id="visual-picker-coverable-radio"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        Select any one
      </legend>
      <div
        className="slds-form-element__control"
      >
        <span
          className="slds-visual-picker_medium slds-visual-picker"
        >
          <input
            id="visual-picker-coverable-radio-1"
            name="visual-picker-coverable-radio_options"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
          />
          <label
            htmlFor="visual-picker-coverable-radio-1"
          >
            <div
              className="slds-visual-picker__figure slds-visual-picker__icon slds-align_absolute-center"
            >
              <span
                className="slds-is-selected"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                    />
                  </svg>
                  
                </span>
              </span>
              <span
                className="slds-is-not-selected"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#connected_apps"
                    />
                  </svg>
                  
                </span>
              </span>
            </div>
            <span
              className="slds-visual-picker__body"
            >
              <span
                className="slds-text-title"
              >
                Connected App
              </span>
            </span>
          </label>
        </span>
        <span
          className="slds-visual-picker_medium slds-visual-picker"
        >
          <input
            id="visual-picker-coverable-radio-2"
            name="visual-picker-coverable-radio_options"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
          />
          <label
            htmlFor="visual-picker-coverable-radio-2"
          >
            <div
              className="slds-visual-picker__figure slds-visual-picker__icon slds-align_absolute-center"
            >
              <span
                className="slds-is-selected"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                    />
                  </svg>
                  
                </span>
              </span>
              <span
                className="slds-is-not-selected"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#custom_apps"
                    />
                  </svg>
                  
                </span>
              </span>
            </div>
            <span
              className="slds-visual-picker__body"
            >
              <span
                className="slds-text-title"
              >
                Custom App
              </span>
            </span>
          </label>
        </span>
      </div>
    </fieldset>
    <hr />
    <h1>
      Checkbox
    </h1>
    <fieldset
      className="slds-form-element"
      id="visual-picker-coverable-checkbox"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        Add the following object(s)
      </legend>
      <div
        className="slds-form-element__control"
      >
        <span
          className="slds-visual-picker slds-visual-picker_medium"
        >
          <input
            id="visual-picker-coverable-checkbox-1"
            name="visual-picker-coverable-checkbox_options"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="visual-picker-coverable-checkbox-1"
          >
            <div
              className="slds-visual-picker__figure slds-visual-picker__icon slds-align_absolute-center"
            >
              <span
                className="slds-is-selected"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                    />
                  </svg>
                  
                </span>
              </span>
              <span
                className="slds-is-not-selected"
              >
                <span
                  className="slds-icon_container slds-icon-standard-account"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large"
                  >
                    <use
                      href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                    />
                  </svg>
                  
                </span>
              </span>
            </div>
            <span
              className="slds-visual-picker__body"
            >
              <span
                className="slds-text-title"
              >
                Account
              </span>
            </span>
          </label>
        </span>
        <span
          className="slds-visual-picker slds-visual-picker_medium"
        >
          <input
            id="visual-picker-coverable-checkbox-2"
            name="visual-picker-coverable-checkbox_options"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="visual-picker-coverable-checkbox-2"
          >
            <div
              className="slds-visual-picker__figure slds-visual-picker__icon slds-align_absolute-center"
            >
              <span
                className="slds-is-selected"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                    />
                  </svg>
                  
                </span>
              </span>
              <span
                className="slds-is-not-selected"
              >
                <span
                  className="slds-icon_container slds-icon-standard-lead"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large"
                  >
                    <use
                      href="/assets/icons/standard-sprite/svg/symbols.svg#lead"
                    />
                  </svg>
                  
                </span>
              </span>
            </div>
            <span
              className="slds-visual-picker__body"
            >
              <span
                className="slds-text-title"
              >
                Lead
              </span>
            </span>
          </label>
        </span>
        <span
          className="slds-visual-picker slds-visual-picker_medium"
        >
          <input
            id="visual-picker-coverable-checkbox-3"
            name="visual-picker-coverable-checkbox_options"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="visual-picker-coverable-checkbox-3"
          >
            <div
              className="slds-visual-picker__figure slds-visual-picker__icon slds-align_absolute-center"
            >
              <span
                className="slds-is-selected"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                    />
                  </svg>
                  
                </span>
              </span>
              <span
                className="slds-is-not-selected"
              >
                <span
                  className="slds-icon_container slds-icon-standard-orders"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large"
                  >
                    <use
                      href="/assets/icons/standard-sprite/svg/symbols.svg#orders"
                    />
                  </svg>
                  
                </span>
              </span>
            </div>
            <span
              className="slds-visual-picker__body"
            >
              <span
                className="slds-text-title"
              >
                Orders
              </span>
            </span>
          </label>
        </span>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`DOM snapshots SLDSVisualPicker Links 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "background": "rgb(244, 246, 249)",
        "padding": "4rem 1rem 0px",
      }
    }
  >
    <div
      className="slds-form-element__control"
    >
      <a
        className="slds-box slds-box_link slds-theme_default slds-box_x-small slds-media slds-visual-picker_vertical"
        href="https://google.com"
      >
        <div
          className="slds-media__figure slds-media__figure_fixed-width slds-align_absolute-center slds-m-left_xx-small"
        >
          <span>
            <svg
              aria-hidden="true"
              className="slds-icon slds-icon-text-default"
            >
              <use
                href="/assets/icons/utility-sprite/svg/symbols.svg#knowledge_base"
              />
            </svg>
            
          </span>
        </div>
        <div
          className="slds-media__body slds-border_left slds-p-around_small"
        >
          <h2
            className="slds-truncate slds-text-heading_small"
            title="Share the knowledge"
          >
            Share the knowledge
          </h2>
          <p
            className="slds-m-top_small"
          >
            Harness your team's collective know-how with our powerful knowledge base
          </p>
        </div>
      </a>
      <a
        className="slds-box slds-box_link slds-theme_default slds-box_x-small slds-media slds-visual-picker_vertical"
        href="https://google.com"
      >
        <div
          className="slds-media__figure slds-media__figure_fixed-width slds-align_absolute-center slds-m-left_xx-small"
        >
          <span>
            <svg
              aria-hidden="true"
              className="slds-icon slds-icon-text-default"
            >
              <use
                href="/assets/icons/utility-sprite/svg/symbols.svg#knowledge_base"
              />
            </svg>
            
          </span>
        </div>
        <div
          className="slds-media__body slds-border_left slds-p-around_small"
        >
          <h2
            className="slds-truncate slds-text-heading_small"
            title="Share the knowledge"
          >
            Share the knowledge
          </h2>
          <p
            className="slds-m-top_small"
          >
            Harness your team's collective know-how with our powerful knowledge base
          </p>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSVisualPicker Non-Coverable 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "background": "rgb(244, 246, 249)",
        "padding": "4rem 1rem 0px",
      }
    }
  >
    <h1>
      Radio
    </h1>
    <fieldset
      className="slds-form-element"
      id="visual-picker-non-coverable-radio"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        Please Select Any One
      </legend>
      <div
        className="slds-form-element__control"
      >
        <span
          className="slds-visual-picker_medium slds-visual-picker"
        >
          <input
            id="visual-picker-non-coverable-radio-1"
            name="visual-picker-non-coverable-radio_options"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
            value="30"
          />
          <label
            htmlFor="visual-picker-non-coverable-radio-1"
          >
            <span
              className="slds-visual-picker__figure slds-visual-picker__text slds-align_absolute-center"
            >
              <span>
                <span
                  className="slds-text-heading_large"
                >
                  $30
                </span>
                <span
                  className="slds-text-title"
                >
                  USD/user/month *
                </span>
              </span>
            </span>
            <span
              className="slds-visual-picker__body"
            >
              <span
                className="slds-text-heading_small"
              >
                Lightning Professional
              </span>
              <span
                className="slds-text-title"
              >
                Complete service CRM for teams of any size
              </span>
            </span>
            <span
              className="slds-icon_container slds-visual-picker__text-check"
            >
              <span>
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                  />
                </svg>
                
              </span>
            </span>
          </label>
        </span>
        <span
          className="slds-visual-picker_medium slds-visual-picker"
        >
          <input
            id="visual-picker-non-coverable-radio-2"
            name="visual-picker-non-coverable-radio_options"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
            value="150"
          />
          <label
            htmlFor="visual-picker-non-coverable-radio-2"
          >
            <span
              className="slds-visual-picker__figure slds-visual-picker__text slds-align_absolute-center"
            >
              <span>
                <span
                  className="slds-text-heading_large"
                >
                  $150
                </span>
                <span
                  className="slds-text-title"
                >
                  USD/user/month *
                </span>
              </span>
            </span>
            <span
              className="slds-visual-picker__body"
            >
              <span
                className="slds-text-heading_small"
              >
                Lightning Enterprise
              </span>
              <span
                className="slds-text-title"
              >
                Everything you need to take support to the next level
              </span>
            </span>
            <span
              className="slds-icon_container slds-visual-picker__text-check"
            >
              <span>
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                  />
                </svg>
                
              </span>
            </span>
          </label>
        </span>
        <span
          className="slds-visual-picker_medium slds-visual-picker"
        >
          <input
            disabled={true}
            id="visual-picker-non-coverable-radio-3"
            name="visual-picker-non-coverable-radio_options"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
            value="300"
          />
          <label
            htmlFor="visual-picker-non-coverable-radio-3"
          >
            <span
              className="slds-visual-picker__figure slds-visual-picker__text slds-align_absolute-center"
            >
              <span>
                <span
                  className="slds-text-heading_large"
                >
                  $300
                </span>
                <span
                  className="slds-text-title"
                >
                  USD/user/month *
                </span>
              </span>
            </span>
            <span
              className="slds-visual-picker__body"
            >
              <span
                className="slds-text-heading_small"
              >
                Lightning Ultimate
              </span>
              <span
                className="slds-text-title"
              >
                Complete support with enterprise-grade customization
              </span>
            </span>
            <span
              className="slds-icon_container slds-visual-picker__text-check"
            >
              <span>
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                  />
                </svg>
                
              </span>
            </span>
          </label>
        </span>
      </div>
    </fieldset>
    <hr />
    <h1>
      Checkbox
    </h1>
    <fieldset
      className="slds-form-element"
      id="visual-picker-non-coverable-checkbox"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        Add the following object(s)
      </legend>
      <div
        className="slds-form-element__control"
      >
        <span
          className="slds-visual-picker slds-visual-picker_medium"
        >
          <input
            id="visual-picker-non-coverable-checkbox-1"
            name="visual-picker-non-coverable-checkbox_options"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="visual-picker-non-coverable-checkbox-1"
          >
            <span
              className="slds-visual-picker__figure slds-visual-picker__text slds-align_absolute-center"
            >
              <span>
                <span
                  className="slds-text-heading_large"
                >
                  $30
                </span>
                <span
                  className="slds-text-title"
                >
                  USD/user/month *
                </span>
              </span>
            </span>
            <span
              className="slds-visual-picker__body"
            >
              <span
                className="slds-text-heading_small"
              >
                Lightning Professional
              </span>
              <span
                className="slds-text-title"
              >
                Complete service CRM for teams of any size
              </span>
            </span>
            <span
              className="slds-icon_container slds-visual-picker__text-check"
            >
              <span>
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                  />
                </svg>
                
              </span>
            </span>
          </label>
        </span>
        <span
          className="slds-visual-picker slds-visual-picker_medium"
        >
          <input
            id="visual-picker-non-coverable-checkbox-2"
            name="visual-picker-non-coverable-checkbox_options"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="visual-picker-non-coverable-checkbox-2"
          >
            <span
              className="slds-visual-picker__figure slds-visual-picker__text slds-align_absolute-center"
            >
              <span>
                <span
                  className="slds-text-heading_large"
                >
                  $150
                </span>
                <span
                  className="slds-text-title"
                >
                  USD/user/month *
                </span>
              </span>
            </span>
            <span
              className="slds-visual-picker__body"
            >
              <span
                className="slds-text-heading_small"
              >
                Lightning Enterprise
              </span>
              <span
                className="slds-text-title"
              >
                Everything you need to take support to the next level
              </span>
            </span>
            <span
              className="slds-icon_container slds-visual-picker__text-check"
            >
              <span>
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                  />
                </svg>
                
              </span>
            </span>
          </label>
        </span>
        <span
          className="slds-visual-picker slds-visual-picker_medium"
        >
          <input
            disabled={true}
            id="visual-picker-non-coverable-checkbox-3"
            name="visual-picker-non-coverable-checkbox_options"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="visual-picker-non-coverable-checkbox-3"
          >
            <span
              className="slds-visual-picker__figure slds-visual-picker__text slds-align_absolute-center"
            >
              <span>
                <span
                  className="slds-text-heading_large"
                >
                  $300
                </span>
                <span
                  className="slds-text-title"
                >
                  USD/user/month *
                </span>
              </span>
            </span>
            <span
              className="slds-visual-picker__body"
            >
              <span
                className="slds-text-heading_small"
              >
                Lightning Ultimate
              </span>
              <span
                className="slds-text-title"
              >
                Complete support with enterprise-grade customization
              </span>
            </span>
            <span
              className="slds-icon_container slds-visual-picker__text-check"
            >
              <span>
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                  />
                </svg>
                
              </span>
            </span>
          </label>
        </span>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`DOM snapshots SLDSVisualPicker Vertical 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "background": "rgb(244, 246, 249)",
        "padding": "4rem 1rem 0px",
      }
    }
  >
    <h1>
      Radio
    </h1>
    <fieldset
      className="slds-form-element"
      id="visual-picker-vertical-non-coverable-radio"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        Please Select Any One
      </legend>
      <div
        className="slds-form-element__control"
      >
        <span
          className="slds-visual-picker_medium slds-visual-picker slds-visual-picker_vertical"
        >
          <input
            id="visual-picker-vertical-non-coverable-radio-1"
            name="visual-picker-vertical-non-coverable-radio_options"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
            value="30"
          />
          <label
            htmlFor="visual-picker-vertical-non-coverable-radio-1"
          >
            <span
              className="slds-visual-picker__figure slds-visual-picker__text slds-align_absolute-center"
            >
              <span>
                <span
                  className="slds-text-heading_medium slds-m-bottom_x-small"
                >
                  Item Text
                </span>
                <span
                  className="slds-text-title"
                >
                  Some optional item description to help the user better understand what this option is about.
                </span>
              </span>
            </span>
            <span
              className="slds-icon_container slds-visual-picker__text-check"
            >
              <span>
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                  />
                </svg>
                
              </span>
            </span>
          </label>
        </span>
        <span
          className="slds-visual-picker_medium slds-visual-picker slds-visual-picker_vertical"
        >
          <input
            id="visual-picker-vertical-non-coverable-radio-2"
            name="visual-picker-vertical-non-coverable-radio_options"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
            value="150"
          />
          <label
            htmlFor="visual-picker-vertical-non-coverable-radio-2"
          >
            <span
              className="slds-visual-picker__figure slds-visual-picker__text slds-align_absolute-center"
            >
              <span>
                <span
                  className="slds-text-heading_medium slds-m-bottom_x-small"
                >
                  Item Text
                </span>
                <span
                  className="slds-text-title"
                >
                  Some optional item description to help the user better understand what this option is about.
                </span>
              </span>
            </span>
            <span
              className="slds-icon_container slds-visual-picker__text-check"
            >
              <span>
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                  />
                </svg>
                
              </span>
            </span>
          </label>
        </span>
        <span
          className="slds-visual-picker_medium slds-visual-picker slds-visual-picker_vertical"
        >
          <input
            disabled={true}
            id="visual-picker-vertical-non-coverable-radio-3"
            name="visual-picker-vertical-non-coverable-radio_options"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
            value="300"
          />
          <label
            htmlFor="visual-picker-vertical-non-coverable-radio-3"
          >
            <span
              className="slds-visual-picker__figure slds-visual-picker__text slds-align_absolute-center"
            >
              <span>
                <span
                  className="slds-text-heading_medium slds-m-bottom_x-small"
                >
                  Item Text
                </span>
                <span
                  className="slds-text-title"
                >
                  Some optional item description to help the user better understand what this option is about.
                </span>
              </span>
            </span>
            <span
              className="slds-icon_container slds-visual-picker__text-check"
            >
              <span>
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                  />
                </svg>
                
              </span>
            </span>
          </label>
        </span>
      </div>
    </fieldset>
    <hr />
    <h1>
      Checkbox
    </h1>
    <fieldset
      className="slds-form-element"
      id="visual-picker-vertical-non-coverable-checkbox"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        Please Select Any One
      </legend>
      <div
        className="slds-form-element__control"
      >
        <span
          className="slds-visual-picker slds-visual-picker_medium slds-visual-picker_vertical"
        >
          <input
            id="visual-picker-vertical-non-coverable-checkbox-1"
            name="visual-picker-vertical-non-coverable-checkbox_options"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="visual-picker-vertical-non-coverable-checkbox-1"
          >
            <span
              className="slds-visual-picker__figure slds-visual-picker__text slds-align_absolute-center"
            >
              <span>
                <span
                  className="slds-text-heading_medium slds-m-bottom_x-small"
                >
                  Item Text
                </span>
                <span
                  className="slds-text-title"
                >
                  Some optional item description to help the user better understand what this option is about.
                </span>
              </span>
            </span>
            <span
              className="slds-icon_container slds-visual-picker__text-check"
            >
              <span>
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                  />
                </svg>
                
              </span>
            </span>
          </label>
        </span>
        <span
          className="slds-visual-picker slds-visual-picker_medium slds-visual-picker_vertical"
        >
          <input
            id="visual-picker-vertical-non-coverable-checkbox-2"
            name="visual-picker-vertical-non-coverable-checkbox_options"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="visual-picker-vertical-non-coverable-checkbox-2"
          >
            <span
              className="slds-visual-picker__figure slds-visual-picker__text slds-align_absolute-center"
            >
              <span>
                <span
                  className="slds-text-heading_medium slds-m-bottom_x-small"
                >
                  Item Text
                </span>
                <span
                  className="slds-text-title"
                >
                  Some optional item description to help the user better understand what this option is about.
                </span>
              </span>
            </span>
            <span
              className="slds-icon_container slds-visual-picker__text-check"
            >
              <span>
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                  />
                </svg>
                
              </span>
            </span>
          </label>
        </span>
        <span
          className="slds-visual-picker slds-visual-picker_medium slds-visual-picker_vertical"
        >
          <input
            disabled={true}
            id="visual-picker-vertical-non-coverable-checkbox-3"
            name="visual-picker-vertical-non-coverable-checkbox_options"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="visual-picker-vertical-non-coverable-checkbox-3"
          >
            <span
              className="slds-visual-picker__figure slds-visual-picker__text slds-align_absolute-center"
            >
              <span>
                <span
                  className="slds-text-heading_medium slds-m-bottom_x-small"
                >
                  Item Text
                </span>
                <span
                  className="slds-text-title"
                >
                  Some optional item description to help the user better understand what this option is about.
                </span>
              </span>
            </span>
            <span
              className="slds-icon_container slds-visual-picker__text-check"
            >
              <span>
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                  />
                </svg>
                
              </span>
            </span>
          </label>
        </span>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`DOM snapshots SLDSVisualPicker Vertical Coverable 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "background": "rgb(244, 246, 249)",
        "padding": "4rem 1rem 0px",
      }
    }
  >
    <h1>
      Radio
    </h1>
    <fieldset
      className="slds-form-element"
      id="visual-picker-vertical-coverable-radio"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        Select any one
      </legend>
      <div
        className="slds-form-element__control"
      >
        <span
          className="slds-visual-picker_medium slds-visual-picker slds-visual-picker_vertical"
        >
          <input
            id="visual-picker-vertical-coverable-radio-1"
            name="visual-picker-vertical-coverable-radio_options"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
          />
          <label
            htmlFor="visual-picker-vertical-coverable-radio-1"
          >
            <div
              className="slds-visual-picker__figure slds-visual-picker__icon slds-align_absolute-center"
            >
              <span
                className="slds-is-selected"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Connected Apps
                  </span>
                </span>
              </span>
              <span
                className="slds-is-not-selected"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#connected_apps"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Connected Apps
                  </span>
                </span>
              </span>
            </div>
          </label>
        </span>
        <span
          className="slds-visual-picker_medium slds-visual-picker slds-visual-picker_vertical"
        >
          <input
            id="visual-picker-vertical-coverable-radio-2"
            name="visual-picker-vertical-coverable-radio_options"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
          />
          <label
            htmlFor="visual-picker-vertical-coverable-radio-2"
          >
            <div
              className="slds-visual-picker__figure slds-visual-picker__icon slds-align_absolute-center"
            >
              <span
                className="slds-is-selected"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Custom Apps
                  </span>
                </span>
              </span>
              <span
                className="slds-is-not-selected"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#custom_apps"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Custom Apps
                  </span>
                </span>
              </span>
            </div>
          </label>
        </span>
      </div>
    </fieldset>
    <hr />
    <h1>
      Checkbox
    </h1>
    <fieldset
      className="slds-form-element"
      id="visual-picker-vertical-coverable-checkbox"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        Add the following object(s)
      </legend>
      <div
        className="slds-form-element__control"
      >
        <span
          className="slds-visual-picker slds-visual-picker_medium slds-visual-picker_vertical"
        >
          <input
            id="visual-picker-vertical-coverable-checkbox-1"
            name="visual-picker-vertical-coverable-checkbox_options"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="visual-picker-vertical-coverable-checkbox-1"
          >
            <div
              className="slds-visual-picker__figure slds-visual-picker__icon slds-align_absolute-center"
            >
              <span
                className="slds-is-selected"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Account
                  </span>
                </span>
              </span>
              <span
                className="slds-is-not-selected"
              >
                <span
                  className="slds-icon_container slds-icon-standard-account"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large"
                  >
                    <use
                      href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Account
                  </span>
                </span>
              </span>
            </div>
          </label>
        </span>
        <span
          className="slds-visual-picker slds-visual-picker_medium slds-visual-picker_vertical"
        >
          <input
            id="visual-picker-vertical-coverable-checkbox-2"
            name="visual-picker-vertical-coverable-checkbox_options"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="visual-picker-vertical-coverable-checkbox-2"
          >
            <div
              className="slds-visual-picker__figure slds-visual-picker__icon slds-align_absolute-center"
            >
              <span
                className="slds-is-selected"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Lead
                  </span>
                </span>
              </span>
              <span
                className="slds-is-not-selected"
              >
                <span
                  className="slds-icon_container slds-icon-standard-lead"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large"
                  >
                    <use
                      href="/assets/icons/standard-sprite/svg/symbols.svg#lead"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Lead
                  </span>
                </span>
              </span>
            </div>
          </label>
        </span>
        <span
          className="slds-visual-picker slds-visual-picker_medium slds-visual-picker_vertical"
        >
          <input
            id="visual-picker-vertical-coverable-checkbox-3"
            name="visual-picker-vertical-coverable-checkbox_options"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="visual-picker-vertical-coverable-checkbox-3"
          >
            <div
              className="slds-visual-picker__figure slds-visual-picker__icon slds-align_absolute-center"
            >
              <span
                className="slds-is-selected"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Orders
                  </span>
                </span>
              </span>
              <span
                className="slds-is-not-selected"
              >
                <span
                  className="slds-icon_container slds-icon-standard-orders"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_large"
                  >
                    <use
                      href="/assets/icons/standard-sprite/svg/symbols.svg#orders"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Orders
                  </span>
                </span>
              </span>
            </div>
          </label>
        </span>
      </div>
    </fieldset>
  </div>
</div>
`;
